modifying all the html pages

--- a/experience.html
+++ b/experience.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Experience - Divyanshu Chauhan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>Experience</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
             <a href="publications.html">Publications</a>
             <a href="contact.html">Contact</a>
@@ -19,8 +18,18 @@
     </header>
 
     <section>
-        <h2>Standard Chartered Bank</h2>
-        <p>Python Developer</p>
+        <h2>Research Assistant | University of Michigan</h2>
+        <p>Working on a <strong>multi-robot autonomy project</strong> focusing on collaborative SLAM, trajectory optimization, and communication-aware mapping.</p>
+    </section>
+
+    <section>
+        <h2>Python Developer | Standard Chartered Bank</h2>
+        <p>Developed Python workflows for <strong>automated threat detection</strong>, reducing response time by 40%. Led API-driven automation projects.</p>
+    </section>
+
+    <section>
+        <h2>Deep Learning Intern | HyperVerge</h2>
+        <p>Worked on <strong>image tampering localization</strong> using deep learning models, improving detection rates significantly.</p>
     </section>
 
     <footer>
