--- a/contact.html
+++ b/contact.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Contact - Divyanshu Chauhan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>Contact</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
             <a href="publications.html">Publications</a>
-            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <section>
-        <h2>Standard Chartered Bank</h2>
-        <p>Python Developer</p>
+        <h2>Get in Touch</h2>
+        <p>Email: <a href="mailto:singhdivyanshu010.ms@gmail.com">singhdivyanshu010.ms@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/div-chauhan">div-chauhan</a></p>
+        <p>GitHub: <a href="https://github.com/Divyanshu-Singh-Chauhan">Divyanshu-Singh-Chauhan</a></p>
     </section>
 
     <footer>
