--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Projects - Divyanshu Chauhan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,15 +12,19 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="experience.html">Experience</a>
-            <a href="projects.html">Projects</a>
             <a href="publications.html">Publications</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <section>
-        <h2>Multi-Robot SLAM</h2>
-        <p>Developed a collaborative SLAM framework for drones using ROS2...</p>
+        <h2>Multi-Robot SLAM Simulator</h2>
+        <p>Developed a <strong>communication-aware, physics-based</strong> simulator using ROS2 for autonomous drones.</p>
+    </section>
+
+    <section>
+        <h2>Lunar Anomaly Search</h2>
+        <p>Built a deep learning pipeline to <strong>detect anomalies on the lunar surface</strong> using NASA LRO camera data.</p>
     </section>
 
     <footer>
