--- a/publications.html
+++ b/publications.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Publications - Divyanshu Chauhan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>Publications</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
-            <a href="publications.html">Publications</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <section>
-        <h2>Multi-Robot SLAM</h2>
-        <p>Developed a collaborative SLAM framework for drones using ROS2...</p>
+        <h2>Deep Learning for COVID-19 Forecasting</h2>
+        <p>Published in <strong>PLOS One Journal</strong>. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0262708">Read more</a></p>
+    </section>
+
+    <section>
+        <h2>Neural Anomaly Search on Lunar Images</h2>
+        <p>Presented at Astrobiology Science Conference (AbSciCon 2022). <a href="https://agu.confex.com/agu/abscicon21/meetingapp.cgi/Paper/1031511">Read more</a></p>
     </section>
 
     <footer>
